<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >
    <item android:title="@string/privacy_policy"
        android:id="@+id/menu_policy"
        android:icon="@drawable/ic_policy"/>

    <item android:title="@string/feed_back"
        android:id="@+id/menu_feedback"
        android:icon="@drawable/ic_feedback"/>

    <item android:title="@string/rate_us"
        android:id="@+id/menu_rateus"
        android:icon="@drawable/ic_rate"/>

    <item
        android:id="@+id/menu_more_app"
        android:icon="@drawable/ic_more_app"
        android:title="@string/more_app" />

    <item android:title="@string/share"
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_share"/>
</menu>